--- a/index.html
+++ b/index.html
@@ -5,16 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.30.1/moment.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.44/moment-timezone-with-data-1970-2030.js"></script>
-    <title>Time zone</title>
+    <link rel="stylesheet" href="style.css" />
+    <title>World Clock</title>
   </head>
   <body>
-    <label for="countries"></label>
-    <select id="countries">
-      <option value="">Select a country</option>
-      <option value="paris">Paris 🇫🇷</option>
-      <option value="tokyo">Tokyo 🇯🇵</option>
-      <option value="sydney">Sydney 🇦🇺</option>
-    </select>
+    <h1>World Clock</h1>
   </body>
+  <footer>Coded by Ana Borges and is in Github and hosted with Netifly</footer>
   <script src="script.js"></script>
 </html>
