--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
   <body>
     <h1>World Clock</h1>
   </body>
-  <footer>Coded by Ana Borges and is in Github and hosted with Netifly</footer>
+  <footer>
+    Coded by <a href="" target="_blank">Ana Borges</a> and is in
+    <a href="" target="_blank">Github</a> and hosted with
+    <a href="" target="_blank">Netlify</a>
+  </footer>
   <script src="script.js"></script>
 </html>
