--- a/index.html
+++ b/index.html
@@ -12,9 +12,16 @@
     <h1>World Clock</h1>
   </body>
   <footer>
-    Coded by <a href="" target="_blank">Ana Borges</a> and is in
-    <a href="" target="_blank">Github</a> and hosted with
-    <a href="" target="_blank">Netlify</a>
+    Coded by
+    <a href="https://github.com/anaborgestri" target="_blank">Ana Borges</a> and
+    is in
+    <a href="https://github.com/anaborgestri/WW-clock-SheCodes" target="_blank"
+      >Github</a
+    >
+    and hosted with
+    <a href="https://main--unique-zabaione-b1b97f.netlify.app/" target="_blank"
+      >Netlify</a
+    >
   </footer>
   <script src="script.js"></script>
 </html>
