--- a/index.html
+++ b/index.html
@@ -9,7 +9,27 @@
     <title>World Clock</title>
   </head>
   <body>
-    <h1>World Clock</h1>
+    <div class="container">
+      <h1>World Clock</h1>
+      <select name="city" id="cities">
+        <option value="">Select a city</option>
+        <option value="">Basel</option>
+        <option value="">Lisbon</option>
+        <option value="">New York</option>
+        <option value="">San Francisco</option>
+      </select>
+      <div class="cities">
+        <h2>Tokyo</h2>
+        <div class="date">15 August 2024</div>
+        <div class="time">19:28</div>
+        <h2>Rio Janeiro</h2>
+        <div class="date">15 August 2024</div>
+        <div class="time">19:28</div>
+        <h2>Barcelona</h2>
+        <div class="date">15 August 2024</div>
+        <div class="time">19:28</div>
+      </div>
+    </div>
   </body>
   <footer>
     Coded by
