--- a/index.html
+++ b/index.html
@@ -19,15 +19,48 @@
         <option value="">San Francisco</option>
       </select>
       <div class="cities">
-        <h2>Tokyo</h2>
-        <div class="date">15 August 2024</div>
-        <div class="time">19:28</div>
-        <h2>Rio Janeiro</h2>
-        <div class="date">15 August 2024</div>
-        <div class="time">19:28</div>
-        <h2>Barcelona</h2>
-        <div class="date">15 August 2024</div>
-        <div class="time">19:28</div>
+        <div id="cityOne">
+          <h2>Tokyo</h2>
+          <div class="city-one-details">
+            <div class="city-one-weather">
+              <span class="weather-icon">☀️</span><br />
+              <span class="weather-description">clear sunshine</span><br />
+              <span class="weather-temperature">9°C</span>
+            </div>
+            <div class="city-one-time">
+              <div class="date">15 August 2024</div>
+              <div class="time">19:28</div>
+            </div>
+          </div>
+        </div>
+        <div id="cityTwo">
+          <h2>Rio Janeiro</h2>
+          <div class="city-two-details">
+            <div class="city-two-weather">
+              <span class="weather-icon">☀️</span><br />
+              <span class="weather-description">clear sunshine</span><br />
+              <span class="weather-temperature">9°C</span>
+            </div>
+            <div class="city-two-time">
+              <div class="date">15 August 2024</div>
+              <div class="time">19:28</div>
+            </div>
+          </div>
+        </div>
+        <div id="cityThree">
+          <h2>Barcelona</h2>
+          <div class="city-three-details">
+            <div class="city-three-weather">
+              <span class="weather-icon">☀️</span><br />
+              <span class="weather-description">clear sunshine</span><br />
+              <span class="weather-temperature">9°C</span>
+            </div>
+            <div class="city-three-time">
+              <div class="date">15 August 2024</div>
+              <div class="time">19:28</div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </body>
