--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
               <span class="weather-temperature">9°C</span>
             </div>
             <div class="city-one-time">
+              <div class="time">7:28 <small>PM</small></div>
               <div class="date">15 August 2024</div>
-              <div class="time">19:28</div>
             </div>
           </div>
         </div>
@@ -49,8 +49,8 @@
               <span class="weather-temperature">9°C</span>
             </div>
             <div class="city-two-time">
+              <div class="time">7:28 <small>PM</small></div>
               <div class="date">15 August 2024</div>
-              <div class="time">19:28</div>
             </div>
           </div>
         </div>
@@ -63,8 +63,8 @@
               <span class="weather-temperature">9°C</span>
             </div>
             <div class="city-three-time">
+              <div class="time">7:28 <small>PM</small></div>
               <div class="date">15 August 2024</div>
-              <div class="time">19:28</div>
             </div>
           </div>
         </div>
