add js for listed cities

--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
               <span class="weather-temperature">9°C</span>
             </div>
             <div class="city-one-time">
-              <div class="time">7:28 <small>PM</small></div>
-              <div class="date">15 August 2024</div>
+              <div class="time" id="onetime"></div>
+              <div class="date" id="onedate"></div>
             </div>
           </div>
         </div>
         <div id="cityTwo">
-          <h2>Rio Janeiro</h2>
+          <h2>Sao Paulo</h2>
           <div class="city-two-details">
             <div class="city-two-weather">
               <span class="weather-icon">☀️</span><br />
@@ -49,8 +49,8 @@
               <span class="weather-temperature">9°C</span>
             </div>
             <div class="city-two-time">
-              <div class="time">7:28 <small>PM</small></div>
-              <div class="date">15 August 2024</div>
+              <div class="time" id="twotime"></div>
+              <div class="date" id="twodate"></div>
             </div>
           </div>
         </div>
@@ -63,8 +63,8 @@
               <span class="weather-temperature">9°C</span>
             </div>
             <div class="city-three-time">
-              <div class="time">7:28 <small>PM</small></div>
-              <div class="date">15 August 2024</div>
+              <div class="time" id="threetime"></div>
+              <div class="date" id="threedate"></div>
             </div>
           </div>
         </div>
