--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
       <h1>World Clock</h1>
       <select name="city" id="cities">
         <option value="">Select a city</option>
-        <option value="">Basel</option>
-        <option value="">Lisbon</option>
-        <option value="">New York</option>
-        <option value="">San Francisco</option>
+        <option value="Europe/Zurich">Basel</option>
+        <option value="Europe/Lisbon">Lisbon</option>
+        <option value="America/New_York">New York</option>
+        <option value="America/Argentina/Buenos_Aires">Buenos Aires</option>
       </select>
       <div class="cities">
         <div id="cityOne">
