--- a/index.html
+++ b/index.html
@@ -30,43 +30,49 @@
           <h2>Tokyo</h2>
           <div class="city-one-details">
             <div class="city-one-weather">
-              <span class="weather-icon">☀️</span><br />
-              <span class="weather-description">clear sunshine</span><br />
-              <span class="weather-temperature">9°C</span>
+              <div class="weather-icon">
+                ☀️
+                <span class="weather-temperature">9<strong>°C</strong> </span>
+              </div>
             </div>
             <div class="city-one-time">
               <div class="time" id="onetime"></div>
               <div class="date" id="onedate"></div>
             </div>
           </div>
+          <div class="weather-description">clear sunshine</div>
         </div>
         <div id="cityTwo">
           <h2>Sao Paulo</h2>
           <div class="city-two-details">
             <div class="city-two-weather">
-              <span class="weather-icon">☀️</span><br />
-              <span class="weather-description">clear sunshine</span><br />
-              <span class="weather-temperature">9°C</span>
+              <div class="weather-icon">
+                ☀️
+                <span class="weather-temperature">9<strong>°C</strong> </span>
+              </div>
             </div>
             <div class="city-two-time">
               <div class="time" id="twotime"></div>
               <div class="date" id="twodate"></div>
             </div>
           </div>
+          <div class="weather-description">clear sunshine</div>
         </div>
         <div id="cityThree">
           <h2>Barcelona</h2>
           <div class="city-three-details">
             <div class="city-three-weather">
-              <span class="weather-icon">☀️</span><br />
-              <span class="weather-description">clear sunshine</span><br />
-              <span class="weather-temperature">9°C</span>
+              <div class="weather-icon">
+                ☀️
+                <span class="weather-temperature">9<strong>°C</strong> </span>
+              </div>
             </div>
             <div class="city-three-time">
               <div class="time" id="threetime"></div>
               <div class="date" id="threedate"></div>
             </div>
           </div>
+          <div class="weather-description">clear sunshine</div>
         </div>
       </div>
     </div>
