set up js select city

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <body>
     <div class="container">
       <h1>World Clock</h1>
-      <select name="city" id="cities">
+      <select name="city" id="cities-select">
         <option value="">Select a city</option>
         <option value="Europe/Zurich">Basel</option>
         <option value="Europe/Lisbon">Lisbon</option>
