--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <h1>World Clock</h1>
       <select name="city" id="cities-select">
         <option value="">Select a city</option>
-        <option value="Europe/Zurich">Basel</option>
+        <option value="Europe/Zurich">Zurich</option>
         <option value="Europe/Lisbon">Lisbon</option>
         <option value="America/New_York">New York</option>
         <option value="America/Argentina/Buenos_Aires">Buenos Aires</option>
